--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ header h1 .seo {
     color: #d9dcd6;
 }*/
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -48,14 +48,31 @@ header h1 .seo {
     font-size: 20px;
 }
 
-.header div ul {
+/*.header div {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}*/
+
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/*.header div ul {
+    list-style-type: none;
+}*/
+
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
+
+/*.header div ul li {
+    display: inline-block;
+    margin-left: 25px;
+}*/
 
 a {
     color: #ffffff;
@@ -91,7 +108,7 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -100,9 +117,20 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
 
-.benefit-lead {
+}
+/*.benefits {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}*/
+
+/*.benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -115,9 +143,20 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+}*/
+
+/*.benefit {
+    margin-bottom: 32px;
+    color: #ffffff;
+
+}*/
+aside section {
+    margin-bottom: 32px;
+    color: #ffffff;
+
 }
 
-.benefit-lead h3 {
+/*.benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -130,9 +169,18 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
+}*/
+
+/*.benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}*/
+aside section h3 {
+    margin-bottom: 10px;
+    text-align: center;    
 }
 
-.benefit-lead img {
+/*.benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -148,9 +196,21 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}*/
+/*.benefit img{
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+
+}*/
+aside section img{
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+
 }
 
-.search-engine-optimization {
+/*.search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -175,8 +235,16 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+}*/
+article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff; 
 }
-
+/*
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -187,9 +255,12 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
+}*/
+article img {
+    max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+/*.search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -202,15 +273,30 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}*/
+article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;  
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+/*.footer {
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}*/
+
+footer h2 {
     font-size: 20px;
 }
+
+/*.footer h2 {
+    font-size: 20px;
+}*/
